--- a/style.css
+++ b/style.css
@@ -40,6 +40,15 @@ h3 {
   border: none;
 }
 
+#g-btn{
+  text-decoration: none;
+  background-color: #51a995;
+  color: #fff;
+  padding: 9px 30px;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
 .sec-space {
   padding: 4rem 0;
 }
@@ -57,6 +66,11 @@ extra-space {
 
 header {
   background-color: #1f4a40;
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  z-index: 999;
 }
 
 #navbar {
@@ -90,9 +104,68 @@ header {
   display: none;
 }
 
+/* Hero Section */
+
+.hero {
+  background-color: #1f4a40;
+}
+
+.hero-box {
+  display: flex;
+  justify-content: space-between;
+  height: 100vh;
+  align-items: center;
+}
+
+.h-left {
+  width: 45%;
+  color: #fff;
+}
+
+.h-left p {
+  padding: 1.5rem 0;
+}
+
+.search{
+  position: relative;
+}
+
+.search input{
+  width: 100%;
+  height: 4rem;
+  border-radius: 35px;
+  padding: 0 20px;
+  font-size: 1rem;
+  outline: none;
+  border: none;
+}
+
+.search a {
+  position: absolute;
+  top: 12px;
+  right: 20px;
+}
+
+.h-right{
+  width: 50%;
+}
+
+.h-right img{
+  width:100%;
+  object-fit: cover;
+}
+
+
+
+
+
+
+
+
+
 @media (max-width: 699px) {
   #menu {
-    background-color: aqua;
+    background-color: #fff;
     display: block;
     width: 280px;
     height: auto;
@@ -101,10 +174,14 @@ header {
     right: -100%;
     padding: 30px 0;
     box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.2);
+    border-radius: 13px;
+    opacity: 0;
+    transition: all 0.3s ease;
   }
 
   #menu.active {
     right: 10px;
+    opacity: 1;
   }
 
   #menu li {
@@ -120,4 +197,27 @@ header {
     font-size: 1.7rem;
     cursor: pointer;
   }
+
+  #w-btn {
+    margin: 20px 0 0 50px;
+    background: #1f4a40;
+    color: #fff;
+  }
+
+.hero-box{
+  flex-direction: column-reverse;
+  justify-content: center;
+  height: auto;
+  align-items: start;
+  padding: 8rem 0;
+}
+
+.h-left{
+  width: 100%;
+}
+
+.h-right{
+  display: none;
+}
+
 }
