--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ h3 {
   border: none;
 }
 
-#g-btn{
+#g-btn {
   text-decoration: none;
   background-color: #51a995;
   color: #fff;
@@ -126,11 +126,11 @@ header {
   padding: 1.5rem 0;
 }
 
-.search{
+.search {
   position: relative;
 }
 
-.search input{
+.search input {
   width: 100%;
   height: 4rem;
   border-radius: 35px;
@@ -146,22 +146,78 @@ header {
   right: 20px;
 }
 
-.h-right{
+.h-right {
   width: 50%;
 }
 
-.h-right img{
-  width:100%;
+.h-right img {
+  width: 100%;
   object-fit: cover;
 }
 
+.features .fe-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
 
+.features .fe-box div {
+  width: 200px;
+}
 
+.features .fe-box img {
+  width: 50px;
+  margin-top: 3rem;
+}
 
+.jobs .job-id {
+  margin-top: 3rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.1);
+}
 
+.jobs .job-id li {
+  padding: 20px 40px;
+  cursor: pointer;
+  color: #000;
+}
 
+.jobs .job-id li.active {
+  background: #51a995;
+  color: #fff;
+}
 
+.jobs .jList {
+  margin-top: 3rem;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  border: 1px solid #ccc;
+  align-items: center;
+  justify-items: start;
+  cursor: pointer;
+  color: #000;
+  padding: 2rem 2rem;
+}
 
+.jobs .jList.delete {
+  display: none;
+}
+
+.jobs .jList:hover {
+  background: #ecf1ee;
+}
+
+.jobs .jList img {
+  width: 40px;
+}
+
+.jobs .jList h3 {
+  padding-bottom: 0;
+}
 
 @media (max-width: 699px) {
   #menu {
@@ -204,20 +260,23 @@ header {
     color: #fff;
   }
 
-.hero-box{
-  flex-direction: column-reverse;
-  justify-content: center;
-  height: auto;
-  align-items: start;
-  padding: 8rem 0;
-}
+  .hero-box {
+    flex-direction: column-reverse;
+    justify-content: center;
+    height: auto;
+    align-items: start;
+    padding: 8rem 0;
+  }
 
-.h-left{
-  width: 100%;
-}
+  .h-left {
+    width: 100%;
+  }
 
-.h-right{
-  display: none;
-}
+  .h-right {
+    display: none;
+  }
 
+  .features .fe-box div {
+    width: 40%;
+  }
 }
