--- a/style.css
+++ b/style.css
@@ -485,4 +485,25 @@ footer {
     width: 50%;
     margin-bottom: 50px;
   }
+
+  /* job detail */
+
+  .job-header {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    background: #f8fcf8;
+    border-radius: 15px;
+    padding: 1rem;
+  }
+
+  .job-img-row {
+    margin-bottom: 1.5rem;
+  }
+
+  .job-header img {
+    padding: 0rem;
+    border-radius: 10px;
+  }
 }
