--- a/style.css
+++ b/style.css
@@ -368,6 +368,38 @@ footer {
   padding-bottom: 2rem;
 }
 
+  /* Contact */
+
+  .contact {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  .contact-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    margin-right: 200px;
+  }
+
+  .contact form{
+    max-width: 400px;
+
+  }
+
+  .contact input,
+  .contact textarea{
+    width: 100%;
+    margin: 0.5rem 0 1rem 0;
+    border: 1px solid #51a995;
+    box-shadow: none;
+    outline: none;
+    padding: 0.8rem 0.5rem;
+    font-size: 1.1rem;
+  }
+
+
 @media (max-width: 1200px) {
   .obj-width {
     width: 95%;
@@ -505,5 +537,22 @@ footer {
   .job-header img {
     padding: 0rem;
     border-radius: 10px;
+  }
+
+  /* contact */
+
+  .contact {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .contact-img{
+    width: 100%;
+  }
+
+  .contact-img img{
+    width: 70%;
+    height: auto;
   }
 }
